0029655: [Regression to 6.9.1] Distance between cylinder and straight line

Trimming line by corner points of surface bounding box is added to reduce rang of line
Test case added